# merraria

./: .gitignore  Makefile  PLAN.md  README.md
.github/workflows/: ci.yml  deploy-bundle.yml
app/: index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  tsconfig.tsbuildinfo  vercel.json  vite.config.ts
app/e2e/: game.spec.ts  helpers.ts  landing.spec.ts  offline.spec.ts  online.spec.ts  sso.spec.ts
app/public/: site.webmanifest
app/scripts/: gen-icons.mjs
app/src/: main.ts  renderer.ts
app/src/engine/: lighting.ts  mining.ts  physics.ts  sim.ts  terrain.ts  tiles.ts  world.ts
app/src/net/: admin.ts  auth.ts  client.ts  events.ts  inviteCodec.ts  rpc.ts  session.ts  sync.ts
app/src/state/: persistence.ts
app/src/ui/: hud.ts  landing.ts  overlays.ts  worldAnim.ts
app/tests/: admin.test.ts  auth.test.ts  events.test.ts  invite.test.ts  lighting.test.ts  mining.test.ts  persistence.test.ts  physics.test.ts  rpc.test.ts  session.test.ts  sim.test.ts  sync.test.ts  terrain.test.ts  tiles.test.ts  world.test.ts
logic/: Cargo.toml  build-bundle.sh  build.sh  rust-toolchain.toml
logic/src/: lib.rs
workflows/: e2e.yml
