[package]
name = "merraria"
description = "Calimero voxel world state (tile overrides + player presence)"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
borsh = "1.6.1"
borsh-derive = "1.6.1"
bs58 = "0.5.1"
# SDK crates are not on crates.io past rc.5 — must be git tag deps, and all
# three must share the exact same tag (workspace version at the tag is 0.0.0).
calimero-sdk = { git = "https://github.com/calimero-network/core.git", branch = "master" }
calimero-storage = { git = "https://github.com/calimero-network/core.git", branch = "master" }
calimero-storage-macros = { git = "https://github.com/calimero-network/core.git", branch = "master" }
thiserror = "1.0.56"

[dev-dependencies]
# "testing" enables the native mock host (TestHost) for `cargo test`
calimero-storage = { git = "https://github.com/calimero-network/core.git", branch = "master", features = ["testing"] }

[profile.app-release]
inherits = "release"
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
